[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.2",
    "fpdf>=1.7.2",
    "openai>=1.65.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
]
